Source/WebCore: Fix for for https://bugs.webkit.org/show_bug.cgi?id=54402 REGRESSION (r72052): Placeholder text doesn't have the right padding for search fields on Windows

Reviewed by Dan Bernstein.

Test: updated fast/forms/placeholder-position.html and tested manually

Consider padding and margin for the results and cancel buttons.  This is important for the Windows
theme which uses padding to correctly position those buttons.  This change fixes the placeholder
position, and also better aligns the results popup list with the actual text you type.

* rendering/RenderTextControlSingleLine.cpp:
(WebCore::RenderTextControlSingleLine::clientPaddingLeft):
(WebCore::RenderTextControlSingleLine::clientPaddingRight):

LayoutTests: Test for https://bugs.webkit.org/show_bug.cgi?id=54402
REGRESSION (r72052): Placeholder text doesn't have the right padding for search fields on Windows

Reviewed by Dan Bernstein.

Unfortunately, this doesn't test the Windows theme, since DRT uses the Safari theme, but I also tested this change manually on Windows and Mac.

* fast/forms/placeholder-position.html: Added a case for a search field with the results button.
* platform/mac/fast/forms/placeholder-position-expected.checksum:
* platform/mac/fast/forms/placeholder-position-expected.png:
* platform/mac/fast/forms/placeholder-position-expected.txt:



Canonical link: https://commits.webkit.org/69207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79284 268f45cc-cd09-0410-ab3c-d52691b4dbfc